--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="app">
       <canvas id="render-screen"></canvas>
+      <h3 id="credits">@ChrisNotDefined | https://github.com/ChrisNotDefined</h3>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
